--- a/languages/wp-menu-custom-fields.po
+++ b/languages/wp-menu-custom-fields.po
@@ -1,15 +1,15 @@
 # Copyright (C) 2020 rtCamp
-# This file is distributed under the same license as the WP Menu Custom Fields plugin.
+# This file is distributed under the GPL2.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Menu Custom Fields 1.0.1\n"
+"Project-Id-Version: WP Menu Custom Fields 1.0.2\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-menu-custom-fields\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-04-23T10:11:40+00:00\n"
+"POT-Creation-Date: 2020-12-18T10:53:40+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.4.0\n"
 "X-Domain: wp-menu-custom-fields\n"
